Sun Dec 28 10:24:29 2003  Tim Janik  <timj@gtk.org>

	* bserecords.idl:
	* bsesong.[hc]:
	* gslfilter.c: s/nominator/numerator/.

Thu Dec 25 07:25:51 2003  Tim Janik  <timj@gtk.org>

	* bsemidievent.[hc]: comment fixups. added SMF meta event types.
	renamed event tick_stamp field to delta_time. added global macros
	to check for channel-voice, system-common and system-realtime
	messages.
	(bse_midi_signal_default): adjusted #7 (volume) default and added
	defaults for #10 (Panorama) and #11 (Expression).
	(boxed_copy_midi_event): fix bogus allocation and copying.
	(bse_midi_free_event): properly free the new event types.

	* bsemididecoder.[hc]: lots of fixes, added SMF delta time and meta
	event parsing. turned the decoder into a proper state machine.

	* bsessequencer.c:
	* bsemidireceiver.cc: cosmetic fixups, adapt to renames.

	* bseproject.proc: added import-midi-file() procedure.
	
	* bsemidievent.h:
	* bserecords.idl: fixed midi signal type names, added some.

Tue Dec 23 05:24:53 2003  Tim Janik  <timj@gtk.org>

	* bseplugin.[hc] (bse_plugin_check_load): disabled .la loading, expect
	readily loadable .so files instead.
	(bse_plugin_path_list_files): allow plugin path to contain executable
	files (instead of directories).

	* bseprocedure.[hc]: removed blurb, name, authors, help and license
	fields from procedures as these informations are kept on types now.
	provide BSE_PROCEDURE_NAME() for easy name access.

	* bsescripthelper.[hc]: introduced "options" field for scripts.

	* mkcproc.pl: 
	* bseplugin.[hc]:
	* bsescripthelper.[hc]:
	* bseexports.h: unified type info field order, keep blurb etc. only
	via bse_type_*() accessors.

	* mkcproc.pl: support OPTIONS.

	* *.proc: BLURB => HELP fixes.

	* bseautodoc.c: don't generate @refBlurb{} andymore since procedures
	only have "help" now.

	* bsequery.c: added -:f option for fatal warnings.

	* bseparasite.proc: removed i18n markup, which is not supported for C